# sb-osu-launcher

./: README.md  mise.toml  package.json  tsconfig.json
src/: consts.ts  fonts.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: launcher.rs  lib.rs  osu_auth.rs  profile_watcher.rs
src/components/: LoginAvatar.tsx  ServerSwitcher.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useLaunchGame.ts
src/i18n/: en.ts  i18n.ts  index.ts  zh.ts  zh_kawaii.ts
src/pages/: AppLayout.tsx  HomePage.tsx  SettingPage.tsx
src/types/: colorthief.d.ts  ppy-sh.ts
src/utils/: dpapi.ts  osu-auth.ts  path.ts
src/zustand/: app.ts  conf.ts  osu-auth.ts  user.ts
test/: watch_osu_folder.py
test/osudb/: buff.py  osudb.py
test/saveOsuAuth/: watch.py
